fixed initial values and left alignment of edit kb dialog

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -71,3 +71,6 @@
     border-bottom: 1px solid #fff;
 }
 
+.margin-left {
+    margin-left: 170px;
+}
